--- a/Kickstarter/en.lproj/MainMenu.xib
+++ b/Kickstarter/en.lproj/MainMenu.xib
@@ -141,6 +141,14 @@
 						<reference key="NSOnImage" ref="291170643"/>
 						<reference key="NSMixedImage" ref="556949843"/>
 					</object>
+					<object class="NSMenuItem" id="750904413">
+						<reference key="NSMenu" ref="970828785"/>
+						<string key="NSTitle">About Kickstarter</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="291170643"/>
+						<reference key="NSMixedImage" ref="556949843"/>
+					</object>
 					<object class="NSMenuItem" id="316879395">
 						<reference key="NSMenu" ref="970828785"/>
 						<string key="NSTitle">Quit Kickstarter</string>
@@ -571,7 +579,7 @@
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="845898869">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSScrollView" id="395836070">
@@ -587,7 +595,6 @@
 											<int key="NSvFlags">4352</int>
 											<string key="NSFrameSize">{359, 133}</string>
 											<reference key="NSSuperview" ref="841144569"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="319841064"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -661,7 +668,6 @@
 									</array>
 									<string key="NSFrame">{{1, 1}, {359, 133}}</string>
 									<reference key="NSSuperview" ref="395836070"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="879426687"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="879426687"/>
@@ -673,7 +679,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="395836070"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="143984266"/>
 									<string key="NSReuseIdentifierKey">_NS:58</string>
 									<reference key="NSTarget" ref="395836070"/>
@@ -685,7 +690,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 									<reference key="NSSuperview" ref="395836070"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="472342509"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<int key="NSsFlags">1</int>
@@ -696,7 +700,6 @@
 							</array>
 							<string key="NSFrame">{{20, 310}, {361, 135}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="841144569"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -710,7 +713,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 453}, {103, 17}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="395836070"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -730,7 +732,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 253}, {158, 17}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="98275495"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -750,7 +751,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{65, 227}, {100, 26}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="6137254"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -850,7 +850,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{20, 234}, {43, 17}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="144951608"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -870,7 +869,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{14, 12}, {69, 32}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="654661022"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -894,8 +892,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{86, 12}, {82, 32}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="643230849">
@@ -945,8 +941,7 @@
 											</set>
 											<string key="NSFrameSize">{356, 14}</string>
 											<reference key="NSSuperview" ref="821991850"/>
-											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="325944445"/>
+											<reference key="NSNextKeyView" ref="234835793"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<object class="NSTextContainer" key="NSTextContainer" id="513950197">
 												<object class="NSLayoutManager" key="NSLayoutManager">
@@ -1006,7 +1001,6 @@
 									</array>
 									<string key="NSFrame">{{1, 1}, {356, 164}}</string>
 									<reference key="NSSuperview" ref="6137254"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="596102267"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="596102267"/>
@@ -1037,7 +1031,6 @@
 									<int key="NSvFlags">256</int>
 									<string key="NSFrame">{{342, 1}, {15, 164}}</string>
 									<reference key="NSSuperview" ref="6137254"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="761134092"/>
 									<string key="NSReuseIdentifierKey">_NS:83</string>
 									<reference key="NSTarget" ref="6137254"/>
@@ -1050,7 +1043,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{-100, -100}, {87, 18}}</string>
 									<reference key="NSSuperview" ref="6137254"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="821991850"/>
 									<string key="NSReuseIdentifierKey">_NS:33</string>
 									<int key="NSsFlags">1</int>
@@ -1062,8 +1054,7 @@
 							</array>
 							<string key="NSFrame">{{23, 60}, {358, 166}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="234835793"/>
+							<reference key="NSNextKeyView" ref="821991850"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133138</int>
 							<reference key="NSVScroller" ref="325944445"/>
@@ -1075,7 +1066,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{20, 286}, {25, 25}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="839073680"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1099,7 +1089,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{44, 286}, {25, 25}}</string>
 							<reference key="NSSuperview" ref="845898869"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="421076236"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1120,8 +1109,6 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{401, 484}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="337636672"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -1259,6 +1246,14 @@
 						<reference key="destination" ref="316879395"/>
 					</object>
 					<int key="connectionID">541</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">orderFrontStandardAboutPanel:</string>
+						<reference key="source" ref="1050"/>
+						<reference key="destination" ref="750904413"/>
+					</object>
+					<int key="connectionID">1298</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1612,6 +1607,7 @@
 							<reference ref="1071809171"/>
 							<reference ref="923260249"/>
 							<reference ref="601943544"/>
+							<reference ref="750904413"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -3500,6 +3496,11 @@
 						<reference key="object" ref="292201775"/>
 						<reference key="parent" ref="576398404"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1296</int>
+						<reference key="object" ref="750904413"/>
+						<reference key="parent" ref="970828785"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -3640,6 +3641,7 @@
 				<string key="1293.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1294.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1295.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1296.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="420.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="494.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="536.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3776,7 +3778,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1295</int>
+			<int key="maxID">1298</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
