--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 25px;
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: "Georgia", sans-serif;
     font-size: 20px;
     line-height: 1.4;
     text-align: center;
