--- a/style.css
+++ b/style.css
@@ -9,13 +9,50 @@ body {
 
 header {
     padding: 20px;
+    font-family: "Helvetica Neue", "Helvetica";
     font-size: 50px;
     font-weight: 400;
     border-bottom: dashed 2px #aaa;
     border-top: dashed 2px #aaa;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Helvetica Neue", "Helvetica";
+}
+
+.alert {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-style: dashed;
+    border-width: 2px;
+    border-color: #d00;
+    border-radius: 10px;
+    font-size: 17px;
+    color: #900;
+    padding: 10px;
+}
+
+code, pre {
+    font-family: "Monaco", "Menlo", "Deja Vu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+    color: #444;
+    border-color: #aaa;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+}
+
+code {
+    padding: 2px;
+}
+
+pre {
+    margin: 15px;
+    text-align: left;
+    padding: 5px 10px 5px 10px;
+}
+
 div#subtitle {
+    font-family: "Georgia", sans-serif;
     font-style: italic;
     font-size: 20px;
     padding: 10px;
