--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Helvetica Neue", "Helvetica";
 }
 
+a.download {
+    font-family: "Georgia", sans-serif;
+    font-size: 25px;
+    padding: 15px;
+    background-color: #392;
+    color: #eee;
+    border-radius: 10px;
+    border: dashed 2px #5b4;
+}
+
+a.download:hover {
+    background-color: #4a3;
+    border-radius: 10px;
+    border: dashed 2px #5b4;
+}
+
 .alert {
     margin-top: 15px;
     margin-bottom: 15px;
